--- a/app/templates/components/number-box.hbs
+++ b/app/templates/components/number-box.hbs
@@ -1,1 +1,6 @@
-{{yield}}
+<!--- app/template/component/number-box.hbs --->
+
+<div class="panel-heading">
+  <h3 class="text-center">{{title}}</h3>
+  <h1 class="text-center">{{if number number '...'}}</h1>
+</div>
