--- a/app/templates/components/library-item.hbs
+++ b/app/templates/components/library-item.hbs
@@ -1,4 +1,4 @@
-sudo<!-- app/templates/components/library-item.hbs -->
+<!-- app/templates/components/library-item.hbs -->
 <div class="panel panel-default library-item">
     <div class="panel-heading">
         <h3 class="panel-title">{{item.name}}</h3>
